--- a/_sass/themes/_light.scss
+++ b/_sass/themes/_light.scss
@@ -46,8 +46,8 @@
 
   /* Topbar */
   --topbar-bg: rgb(255, 255, 255, 0.7);
-  --topbar-text-color: rgb(78, 78, 78);
-  --search-border-color: rgb(240, 240, 240);
+  --topbar-text-color: var(--text-color);
+  --search-border-color: rgb(130, 146, 171);
   --search-icon-color: #c2c6cc;
   --input-focus-border-color: #b8b8b8;
 
@@ -73,8 +73,8 @@
   --kbd-text-color: var(--text-color);
   --kbd-bg-color: white;
   --prompt-text-color: rgb(46, 46, 46, 0.77);
-  --prompt-tip-bg: rgb(123, 247, 144, 0.2);
-  --prompt-tip-icon-color: #03b303;
+  --prompt-tip-bg: rgba(210, 212, 210, 0.2);
+  --prompt-tip-icon-color: #000400;
   --prompt-info-bg: #e1f5fe;
   --prompt-info-icon-color: #0070cb;
   --prompt-warning-bg: rgb(255, 243, 205);
